# cloud-huawei-notepad-API

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  hwcloud_api_README.md  notepad_client.py  pyproject.toml
cloud_space_huawei/: __init__.py  auth.py  base.py  client.py  contacts.py  drive.py  find_device.py  fingerprint.py  gallery.py  notepad.py  payment.py  revisions.py
docs/: DISCLAIMER.md  contacts.md  drive.md  find_device.md  gallery.md  notepad.md  payment.md  revisions.md
