[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cloud-space-huawei"
version = "0.2.0"
description = "华为云空间 Python SDK — 登录、备忘录、联系人、图库、云盘、查找设备"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "cloud-space-huawei Contributors" },
]
keywords = ["huawei", "cloud", "notepad", "contacts", "gallery", "drive", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
image = [
    "Pillow>=9.0",
]
fingerprint = [
    "playwright>=1.40",
]
dev = [
    "pytest>=7.0",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v -s --tb=short"
markers = [
    "integration: 集成测试（需要真实网络请求）",
    "slow: 慢速测试",
    "performance: 性能测试",
]

[tool.setuptools.packages.find]
include = ["cloud_space_huawei*"]
